# R-alit-Augment-e

./: CMakeLists.txt  README.md  dependency.sh  main  main.cpp
opencv_code/: AprilTagReader.cpp  AprilTagReader.h  AprilTagReaderTest.cpp  mainCV  mainCV.cpp  testClass
opencv_code/calib/: calibration  out_camera_data.xml
opengl_code/model/suzanne/: suzanne.mtl
